--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.5.0",
     "react-svg": "^16.3.0",
