--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-scroll-area": "^1.2.8",
     "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
@@ -68,6 +69,7 @@
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "leva": "^0.10.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.509.0",
@@ -85,10 +87,12 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.5.0",
     "react-svg": "^16.3.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.0.15",
