--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-resizable-panels": "^2.1.7",
     "react-router": "^7.5.0",
     "react-svg": "^16.3.0",
+    "react-use": "^17.6.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
