--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-leaflet": "^5.0.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
+    "react-rewards": "^2.1.0",
     "react-router": "^7.5.0",
     "react-svg": "^16.3.0",
     "remark-gfm": "^4.0.1",
