--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@blocknote/core": "^0.26.0",
     "@blocknote/react": "^0.26.0",
     "@blocknote/shadcn": "^0.26.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/utilities": "^3.2.2",
     "@faker-js/faker": "^9.6.0",
     "@genkit-ai/googleai": "^1.7.0",
     "@gradio/client": "^1.14.2",
