--- a/package.json
+++ b/package.json
@@ -111,7 +111,7 @@
   },
   "devDependencies": {
     "@ai-sdk/openai-compatible": "^0.2.14",
-    "@eslint/js": "^9.21.0",
+    "@biomejs/biome": "2.0.5",
     "@tailwindcss/vite": "^4.0.15",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
@@ -128,20 +128,12 @@
     "@vitejs/plugin-react-swc": "^3.8.0",
     "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
     "dbmate": "^2.26.0",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.2",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "nodemon": "^3.1.10",
-    "prettier": "3.5.3",
     "tw-animate-css": "^1.2.9",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
     "umzug": "^3.8.2",
     "vite": "^6.2.0"
   },
-  "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
+  "packageManager": "pnpm@10.12.2+sha512.a32540185b964ee30bb4e979e405adc6af59226b438ee4cc19f9e8773667a66d302f5bfee60a39d3cac69e35e4b96e708a71dd002b7e9359c4112a1722ac323f"
 }
