--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "@types/express": "^5.0.1",
     "@types/image-blob-reduce": "^4.1.4",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/leaflet": "^1.9.19",
     "@types/lodash": "^4.17.16",
     "@types/node": "^22.13.16",
     "@types/pluralize": "^0.0.33",
