--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,7 @@
 
 volumes:
   db-data:
+  redis-data:
 
 services:
   server:
@@ -78,3 +79,10 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+
+  redis:
+    image: redis:7
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
