--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "genkit": "^1.7.0",
     "image-blob-reduce": "^4.1.0",
     "input-otp": "^1.4.2",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -84,6 +85,7 @@
     "node-emoji": "^2.2.0",
     "pluralize": "^8.0.0",
     "random-word-slugs": "^0.1.7",
+    "rate-limiter-flexible": "^7.1.1",
     "react": "^19.1.0",
     "react-camera-pro": "^1.4.0",
     "react-day-picker": "^9.6.3",
