--- a/db/fly.toml
+++ b/db/fly.toml
@@ -12,9 +12,9 @@ primary_region = 'yyz'
 
 
 [[vm]]
-  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 2048
 
 [processes]
 app = """--datadir /data/mysql \
