--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "embla-carousel-react": "^8.5.2",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-slow-down": "^2.1.0",
     "genkit": "^1.7.0",
     "image-blob-reduce": "^4.1.0",
     "input-otp": "^1.4.2",
@@ -138,5 +139,5 @@
     "umzug": "^3.8.2",
     "vite": "^6.2.0"
   },
-  "packageManager": "pnpm@10.12.3+sha512.467df2c586056165580ad6dfb54ceaad94c5a30f80893ebdec5a44c5aa73c205ae4a5bb9d5ed6bb84ea7c249ece786642bbb49d06a307df218d03da41c317417"
+  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
