--- a/package.json
+++ b/package.json
@@ -1,143 +1,143 @@
 {
-  "name": "crudvale",
-  "private": true,
-  "version": "0.0.1",
-  "type": "module",
-  "scripts": {
-    "dev": "nodemon --watch src/server --ext ts --exec 'tsx src/server/server.ts'",
-    "start:preview": "NODE_ENV=production tsx src/server/server.ts",
-    "start": "NODE_ENV=production node dist/server/server.js",
-    "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json"
-  },
-  "dependencies": {
-    "@ai-sdk/google": "^1.2.18",
-    "@ai-sdk/react": "^1.2.12",
-    "@blocknote/core": "^0.26.0",
-    "@blocknote/react": "^0.26.0",
-    "@blocknote/shadcn": "^0.26.0",
-    "@dnd-kit/core": "^6.3.1",
-    "@dnd-kit/utilities": "^3.2.2",
-    "@faker-js/faker": "^9.6.0",
-    "@genkit-ai/googleai": "^1.7.0",
-    "@gradio/client": "^1.14.2",
-    "@hookform/resolvers": "^4.1.3",
-    "@paralleldrive/cuid2": "^2.2.2",
-    "@radix-ui/react-accordion": "^1.2.10",
-    "@radix-ui/react-alert-dialog": "^1.1.13",
-    "@radix-ui/react-avatar": "^1.1.9",
-    "@radix-ui/react-checkbox": "^1.3.1",
-    "@radix-ui/react-collapsible": "^1.1.10",
-    "@radix-ui/react-context-menu": "^2.2.14",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-dropdown-menu": "^2.1.14",
-    "@radix-ui/react-hover-card": "^1.1.13",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-menubar": "^1.1.14",
-    "@radix-ui/react-navigation-menu": "^1.2.12",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-progress": "^1.1.6",
-    "@radix-ui/react-radio-group": "^1.3.6",
-    "@radix-ui/react-scroll-area": "^1.2.8",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-separator": "^1.1.7",
-    "@radix-ui/react-slider": "^1.3.4",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@radix-ui/react-switch": "^1.2.4",
-    "@radix-ui/react-tabs": "^1.1.11",
-    "@radix-ui/react-toast": "^1.2.13",
-    "@radix-ui/react-toggle-group": "^1.1.10",
-    "@radix-ui/react-tooltip": "^1.2.6",
-    "@react-three/drei": "^10.0.6",
-    "@react-three/fiber": "9",
-    "@tanstack/react-query": "^5.74.0",
-    "@tanstack/react-table": "^8.21.2",
-    "@uidotdev/usehooks": "^2.4.1",
-    "ai": "^4.3.16",
-    "animal-avatar-generator": "^1.2.0",
-    "axios": "^1.8.4",
-    "bcrypt-ts": "^6.0.0",
-    "body-parser": "^2.2.0",
-    "chalk": "^5.4.1",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
-    "cors": "^2.8.5",
-    "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "embla-carousel-react": "^8.5.2",
-    "express": "^5.1.0",
-    "express-rate-limit": "^7.5.0",
-    "express-slow-down": "^2.1.0",
-    "genkit": "^1.7.0",
-    "image-blob-reduce": "^4.1.0",
-    "input-otp": "^1.4.2",
-    "ioredis": "^5.6.1",
-    "jsonwebtoken": "^9.0.2",
-    "jwt-decode": "^4.0.0",
-    "leaflet": "^1.9.4",
-    "leva": "^0.10.0",
-    "lodash": "^4.17.21",
-    "lucide-react": "^0.509.0",
-    "mnemonic-id": "^3.2.7",
-    "motion": "^12.6.5",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.14.0",
-    "next-themes": "^0.4.6",
-    "node-emoji": "^2.2.0",
-    "pluralize": "^8.0.0",
-    "random-word-slugs": "^0.1.7",
-    "rate-limiter-flexible": "^7.1.1",
-    "react": "^19.1.0",
-    "react-camera-pro": "^1.4.0",
-    "react-day-picker": "^9.6.3",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.54.2",
-    "react-icons": "^5.5.0",
-    "react-leaflet": "^5.0.0",
-    "react-markdown": "^10.1.0",
-    "react-resizable-panels": "^2.1.7",
-    "react-rewards": "^2.1.0",
-    "react-router": "^7.5.0",
-    "react-svg": "^16.3.0",
-    "remark-gfm": "^4.0.1",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.0.15",
-    "three": "^0.175.0",
-    "three-stdlib": "^2.35.15",
-    "tsx": "^4.3.0",
-    "uuid": "^11.1.0",
-    "vaul": "^1.1.2",
-    "vite-express": "*",
-    "weighted": "^1.0.0",
-    "zod": "3.25.39"
-  },
-  "devDependencies": {
-    "@ai-sdk/openai-compatible": "^0.2.14",
-    "@biomejs/biome": "2.0.5",
-    "@tailwindcss/vite": "^4.0.15",
-    "@types/body-parser": "^1.19.5",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/image-blob-reduce": "^4.1.4",
-    "@types/jsonwebtoken": "^9.0.9",
-    "@types/leaflet": "^1.9.19",
-    "@types/lodash": "^4.17.16",
-    "@types/node": "^22.13.16",
-    "@types/pluralize": "^0.0.33",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@types/three": "^0.175.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-    "dbmate": "^2.26.0",
-    "globals": "^15.15.0",
-    "nodemon": "^3.1.10",
-    "tw-animate-css": "^1.2.9",
-    "typescript": "~5.7.2",
-    "umzug": "^3.8.2",
-    "vite": "^6.2.0"
-  },
-  "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
+    "name": "crudvale",
+    "private": true,
+    "version": "0.0.1",
+    "type": "module",
+    "scripts": {
+        "dev": "nodemon --watch src --ext ts,json --exec 'tsx src/server/server.ts'",
+        "start:preview": "NODE_ENV=production tsx src/server/server.ts",
+        "start": "NODE_ENV=production node dist/server/server.js",
+        "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json"
+    },
+    "dependencies": {
+        "@ai-sdk/google": "^1.2.18",
+        "@ai-sdk/react": "^1.2.12",
+        "@blocknote/core": "^0.26.0",
+        "@blocknote/react": "^0.26.0",
+        "@blocknote/shadcn": "^0.26.0",
+        "@dnd-kit/core": "^6.3.1",
+        "@dnd-kit/utilities": "^3.2.2",
+        "@faker-js/faker": "^9.6.0",
+        "@genkit-ai/googleai": "^1.7.0",
+        "@gradio/client": "^1.14.2",
+        "@hookform/resolvers": "^4.1.3",
+        "@paralleldrive/cuid2": "^2.2.2",
+        "@radix-ui/react-accordion": "^1.2.10",
+        "@radix-ui/react-alert-dialog": "^1.1.13",
+        "@radix-ui/react-avatar": "^1.1.9",
+        "@radix-ui/react-checkbox": "^1.3.1",
+        "@radix-ui/react-collapsible": "^1.1.10",
+        "@radix-ui/react-context-menu": "^2.2.14",
+        "@radix-ui/react-dialog": "^1.1.13",
+        "@radix-ui/react-dropdown-menu": "^2.1.14",
+        "@radix-ui/react-hover-card": "^1.1.13",
+        "@radix-ui/react-label": "^2.1.6",
+        "@radix-ui/react-menubar": "^1.1.14",
+        "@radix-ui/react-navigation-menu": "^1.2.12",
+        "@radix-ui/react-popover": "^1.1.13",
+        "@radix-ui/react-progress": "^1.1.6",
+        "@radix-ui/react-radio-group": "^1.3.6",
+        "@radix-ui/react-scroll-area": "^1.2.8",
+        "@radix-ui/react-select": "^2.2.4",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slider": "^1.3.4",
+        "@radix-ui/react-slot": "^1.2.2",
+        "@radix-ui/react-switch": "^1.2.4",
+        "@radix-ui/react-tabs": "^1.1.11",
+        "@radix-ui/react-toast": "^1.2.13",
+        "@radix-ui/react-toggle-group": "^1.1.10",
+        "@radix-ui/react-tooltip": "^1.2.6",
+        "@react-three/drei": "^10.0.6",
+        "@react-three/fiber": "9",
+        "@tanstack/react-query": "^5.74.0",
+        "@tanstack/react-table": "^8.21.2",
+        "@uidotdev/usehooks": "^2.4.1",
+        "ai": "^4.3.16",
+        "animal-avatar-generator": "^1.2.0",
+        "axios": "1.11.0",
+        "bcrypt-ts": "^6.0.0",
+        "body-parser": "^2.2.0",
+        "chalk": "^5.4.1",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
+        "cors": "^2.8.5",
+        "date-fns": "^4.1.0",
+        "dotenv": "^16.4.7",
+        "embla-carousel-react": "^8.5.2",
+        "express": "^5.1.0",
+        "express-rate-limit": "^7.5.0",
+        "express-slow-down": "^2.1.0",
+        "genkit": "^1.7.0",
+        "image-blob-reduce": "^4.1.0",
+        "input-otp": "^1.4.2",
+        "ioredis": "^5.6.1",
+        "jsonwebtoken": "^9.0.2",
+        "jwt-decode": "^4.0.0",
+        "leaflet": "^1.9.4",
+        "leva": "^0.10.0",
+        "lodash": "^4.17.21",
+        "lucide-react": "^0.509.0",
+        "mnemonic-id": "^3.2.7",
+        "motion": "^12.6.5",
+        "mysql": "^2.18.1",
+        "mysql2": "^3.14.0",
+        "next-themes": "^0.4.6",
+        "node-emoji": "^2.2.0",
+        "pluralize": "^8.0.0",
+        "random-word-slugs": "^0.1.7",
+        "rate-limiter-flexible": "^7.1.1",
+        "react": "^19.1.0",
+        "react-camera-pro": "^1.4.0",
+        "react-day-picker": "^9.6.3",
+        "react-dom": "^19.1.0",
+        "react-hook-form": "^7.54.2",
+        "react-icons": "^5.5.0",
+        "react-leaflet": "^5.0.0",
+        "react-markdown": "^10.1.0",
+        "react-resizable-panels": "^2.1.7",
+        "react-rewards": "^2.1.0",
+        "react-router": "^7.5.0",
+        "react-svg": "^16.3.0",
+        "remark-gfm": "^4.0.1",
+        "sonner": "^2.0.3",
+        "tailwind-merge": "^3.2.0",
+        "tailwindcss": "^4.0.15",
+        "three": "^0.175.0",
+        "three-stdlib": "^2.35.15",
+        "tsx": "^4.3.0",
+        "uuid": "^11.1.0",
+        "vaul": "^1.1.2",
+        "vite-express": "*",
+        "weighted": "^1.0.0",
+        "zod": "3.25.39"
+    },
+    "devDependencies": {
+        "@ai-sdk/openai-compatible": "^0.2.14",
+        "@biomejs/biome": "2.0.5",
+        "@tailwindcss/vite": "^4.0.15",
+        "@types/body-parser": "^1.19.5",
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.1",
+        "@types/image-blob-reduce": "^4.1.4",
+        "@types/jsonwebtoken": "^9.0.9",
+        "@types/leaflet": "^1.9.19",
+        "@types/lodash": "^4.17.16",
+        "@types/node": "^22.13.16",
+        "@types/pluralize": "^0.0.33",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
+        "@types/three": "^0.175.0",
+        "@vitejs/plugin-react": "^4.3.4",
+        "@vitejs/plugin-react-swc": "^3.8.0",
+        "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+        "dbmate": "^2.26.0",
+        "globals": "^15.15.0",
+        "nodemon": "^3.1.10",
+        "tw-animate-css": "^1.2.9",
+        "typescript": "~5.7.2",
+        "umzug": "^3.8.2",
+        "vite": "^6.2.0"
+    },
+    "packageManager": "pnpm@10.13.1+sha512.37ebf1a5c7a30d5fabe0c5df44ee8da4c965ca0c5af3dbab28c3a1681b70a256218d05c81c9c0dcf767ef6b8551eb5b960042b9ed4300c59242336377e01cfad"
 }
