--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -1,24 +1,19 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "module": "ES2020",
-    "moduleResolution": "bundler",
-    "jsx": "react-jsx",
-    "esModuleInterop": true
-    /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "forceConsistentCasingInFileNames": true
-    /* Disallow inconsistently-cased references to the same file. */,
-    "strict": true
-    /* Enable all strict type-checking options. */,
-    "skipLibCheck": true
-    /* Skip type checking of declaration files. */,
-    "emitDeclarationOnly": false,
-    "declaration": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": [
-        "./*"
-      ]
+    "extends": "../../tsconfig.json",
+    "compilerOptions": {
+        "module": "ES2020",
+        "moduleResolution": "bundler",
+        "jsx": "react-jsx",
+        "esModuleInterop": true,
+        /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */ "forceConsistentCasingInFileNames": true,
+        /* Disallow inconsistently-cased references to the same file. */ "strict": true,
+        /* Enable all strict type-checking options. */ "skipLibCheck": true,
+        /* Skip type checking of declaration files. */ "emitDeclarationOnly": false,
+        "declaration": true,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": ["./*"],
+            "@/shared/*": ["../shared/*"]
+        }
     }
-  }
 }
