--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@radix-ui/react-toast": "^1.2.13",
         "@radix-ui/react-toggle-group": "^1.1.10",
         "@radix-ui/react-tooltip": "^1.2.6",
+        "@radix-ui/react-visually-hidden": "^1.2.3",
         "@react-three/drei": "^10.0.6",
         "@react-three/fiber": "9",
         "@tanstack/react-query": "^5.74.0",
