--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "dev": "nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts",
         "start:preview": "NODE_ENV=production tsx src/server/server.ts",
         "start": "NODE_ENV=production node dist/server/server.js",
-        "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json"
+        "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json && tsc-alias -p src/server/tsconfig.json"
     },
     "dependencies": {
         "@ai-sdk/google": "^1.2.18",
@@ -106,6 +106,7 @@
         "tailwindcss": "^4.0.15",
         "three": "^0.175.0",
         "three-stdlib": "^2.35.15",
+        "tsc-alias": "^1.8.16",
         "tsx": "^4.3.0",
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
