--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -120,5 +120,5 @@
             "@shared/*": ["../shared/*"]
         }
     },
-    "include": ["./**/*.ts", "./**/*.tsx"]
+    "include": ["./**/*.ts", "./**/*.tsx", "../shared/**/*.ts"]
 }
