--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "mysql": "^2.18.1",
         "mysql2": "^3.14.0",
         "next-themes": "^0.4.6",
+        "node-cache": "^5.1.2",
         "node-emoji": "^2.2.0",
         "pluralize": "^8.0.0",
         "random-word-slugs": "^0.1.7",
