--- a/package.json
+++ b/package.json
@@ -10,138 +10,137 @@
         "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json && tsc-alias -p src/server/tsconfig.json"
     },
     "dependencies": {
-        "@ai-sdk/google": "^1.2.18",
+        "@ai-sdk/google": "^1.2.22",
         "@ai-sdk/react": "^1.2.12",
         "@blocknote/core": "^0.26.0",
         "@blocknote/react": "^0.26.0",
         "@blocknote/shadcn": "^0.26.0",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/utilities": "^3.2.2",
-        "@faker-js/faker": "^9.6.0",
-        "@genkit-ai/googleai": "^1.7.0",
-        "@gradio/client": "^1.14.2",
+        "@faker-js/faker": "^9.9.0",
+        "@genkit-ai/googleai": "^1.16.1",
+        "@gradio/client": "^1.17.1",
         "@hookform/resolvers": "^4.1.3",
         "@paralleldrive/cuid2": "^2.2.2",
-        "@radix-ui/react-accordion": "^1.2.10",
-        "@radix-ui/react-alert-dialog": "^1.1.13",
-        "@radix-ui/react-avatar": "^1.1.9",
-        "@radix-ui/react-checkbox": "^1.3.1",
-        "@radix-ui/react-collapsible": "^1.1.10",
-        "@radix-ui/react-context-menu": "^2.2.14",
-        "@radix-ui/react-dialog": "^1.1.13",
-        "@radix-ui/react-dropdown-menu": "^2.1.14",
-        "@radix-ui/react-hover-card": "^1.1.13",
-        "@radix-ui/react-label": "^2.1.6",
-        "@radix-ui/react-menubar": "^1.1.14",
-        "@radix-ui/react-navigation-menu": "^1.2.12",
-        "@radix-ui/react-popover": "^1.1.13",
-        "@radix-ui/react-progress": "^1.1.6",
-        "@radix-ui/react-radio-group": "^1.3.6",
-        "@radix-ui/react-scroll-area": "^1.2.8",
-        "@radix-ui/react-select": "^2.2.4",
+        "@radix-ui/react-accordion": "^1.2.12",
+        "@radix-ui/react-alert-dialog": "^1.1.15",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-checkbox": "^1.3.3",
+        "@radix-ui/react-collapsible": "^1.1.12",
+        "@radix-ui/react-context-menu": "^2.2.16",
+        "@radix-ui/react-dialog": "^1.1.15",
+        "@radix-ui/react-dropdown-menu": "^2.1.16",
+        "@radix-ui/react-hover-card": "^1.1.15",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-menubar": "^1.1.16",
+        "@radix-ui/react-navigation-menu": "^1.2.14",
+        "@radix-ui/react-popover": "^1.1.15",
+        "@radix-ui/react-progress": "^1.1.7",
+        "@radix-ui/react-radio-group": "^1.3.8",
+        "@radix-ui/react-scroll-area": "^1.2.10",
+        "@radix-ui/react-select": "^2.2.6",
         "@radix-ui/react-separator": "^1.1.7",
-        "@radix-ui/react-slider": "^1.3.4",
-        "@radix-ui/react-slot": "^1.2.2",
-        "@radix-ui/react-switch": "^1.2.4",
-        "@radix-ui/react-tabs": "^1.1.11",
-        "@radix-ui/react-toast": "^1.2.13",
-        "@radix-ui/react-toggle-group": "^1.1.10",
-        "@radix-ui/react-tooltip": "^1.2.6",
+        "@radix-ui/react-slider": "^1.3.6",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.6",
+        "@radix-ui/react-tabs": "^1.1.13",
+        "@radix-ui/react-toast": "^1.2.15",
+        "@radix-ui/react-toggle-group": "^1.1.11",
+        "@radix-ui/react-tooltip": "^1.2.8",
         "@radix-ui/react-visually-hidden": "^1.2.3",
-        "@react-three/drei": "^10.0.6",
-        "@react-three/fiber": "9",
-        "@tanstack/react-query": "^5.74.0",
-        "@tanstack/react-table": "^8.21.2",
+        "@react-three/drei": "^10.7.3",
+        "@react-three/fiber": "^9.3.0",
+        "@tanstack/react-query": "^5.85.5",
+        "@tanstack/react-table": "^8.21.3",
         "@uidotdev/usehooks": "^2.4.1",
-        "ai": "^4.3.16",
+        "ai": "^4.3.19",
         "animal-avatar-generator": "^1.2.0",
         "axios": "1.11.0",
         "bcrypt-ts": "^6.0.0",
         "body-parser": "^2.2.0",
-        "chalk": "^5.4.1",
+        "chalk": "^5.6.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
-        "dotenv": "^16.4.7",
-        "embla-carousel-react": "^8.5.2",
+        "dotenv": "^16.6.1",
+        "embla-carousel-react": "^8.6.0",
         "express": "^5.1.0",
-        "express-rate-limit": "^7.5.0",
+        "express-rate-limit": "^7.5.1",
         "express-slow-down": "^2.1.0",
-        "genkit": "^1.7.0",
+        "genkit": "^1.16.1",
         "image-blob-reduce": "^4.1.0",
         "input-otp": "^1.4.2",
-        "ioredis": "^5.6.1",
+        "ioredis": "^5.7.0",
         "jsonwebtoken": "^9.0.2",
         "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
-        "leva": "^0.10.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.509.0",
         "mnemonic-id": "^3.2.7",
-        "motion": "^12.6.5",
+        "motion": "^12.23.12",
         "mysql": "^2.18.1",
-        "mysql2": "^3.14.0",
+        "mysql2": "^3.14.3",
         "next-themes": "^0.4.6",
         "node-cache": "^5.1.2",
         "node-emoji": "^2.2.0",
         "pluralize": "^8.0.0",
         "random-word-slugs": "^0.1.7",
-        "rate-limiter-flexible": "^7.1.1",
-        "react": "^19.1.0",
+        "rate-limiter-flexible": "^7.2.0",
+        "react": "^19.1.1",
         "react-camera-pro": "^1.4.0",
-        "react-day-picker": "^9.6.3",
-        "react-dom": "^19.1.0",
-        "react-hook-form": "^7.54.2",
+        "react-day-picker": "^9.9.0",
+        "react-dom": "^19.1.1",
+        "react-hook-form": "^7.62.0",
         "react-icons": "^5.5.0",
         "react-leaflet": "^5.0.0",
         "react-markdown": "^10.1.0",
-        "react-resizable-panels": "^2.1.7",
+        "react-resizable-panels": "^2.1.9",
         "react-rewards": "^2.1.0",
-        "react-router": "^7.5.0",
+        "react-router": "^7.8.1",
         "react-svg": "^16.3.0",
         "remark-gfm": "^4.0.1",
-        "sonner": "^2.0.3",
-        "tailwind-merge": "^3.2.0",
-        "tailwindcss": "^4.0.15",
+        "sonner": "^2.0.7",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss": "^4.1.12",
         "three": "^0.175.0",
-        "three-stdlib": "^2.35.15",
+        "three-stdlib": "^2.36.0",
         "tsc-alias": "^1.8.16",
-        "tsx": "^4.3.0",
+        "tsx": "^4.20.4",
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
-        "vite-express": "*",
+        "vite-express": "^0.21.1",
         "weighted": "^1.0.0",
         "winston": "^3.17.0",
         "zod": "3.25.39"
     },
     "devDependencies": {
-        "@ai-sdk/openai-compatible": "^0.2.14",
+        "@ai-sdk/openai-compatible": "^0.2.16",
         "@biomejs/biome": "2.0.5",
-        "@tailwindcss/vite": "^4.0.15",
-        "@types/body-parser": "^1.19.5",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^5.0.1",
+        "@tailwindcss/vite": "^4.1.12",
+        "@types/body-parser": "^1.19.6",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
         "@types/image-blob-reduce": "^4.1.4",
-        "@types/jsonwebtoken": "^9.0.9",
-        "@types/leaflet": "^1.9.19",
-        "@types/lodash": "^4.17.16",
-        "@types/node": "^22.13.16",
+        "@types/jsonwebtoken": "^9.0.10",
+        "@types/leaflet": "^1.9.20",
+        "@types/lodash": "^4.17.20",
+        "@types/node": "^22.17.2",
         "@types/pluralize": "^0.0.33",
-        "@types/react": "^19.0.10",
-        "@types/react-dom": "^19.0.4",
+        "@types/react": "^19.1.10",
+        "@types/react-dom": "^19.1.7",
         "@types/three": "^0.175.0",
-        "@vitejs/plugin-react": "^4.3.4",
-        "@vitejs/plugin-react-swc": "^3.8.0",
+        "@vitejs/plugin-react": "^4.7.0",
+        "@vitejs/plugin-react-swc": "^3.11.0",
         "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
-        "dbmate": "^2.26.0",
+        "dbmate": "^2.28.0",
         "globals": "^15.15.0",
         "nodemon": "^3.1.10",
-        "tw-animate-css": "^1.2.9",
-        "typescript": "~5.7.2",
+        "tw-animate-css": "^1.3.7",
+        "typescript": "~5.7.3",
         "umzug": "^3.8.2",
-        "vite": "^6.2.0"
+        "vite": "^6.3.5"
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b"
 }
