--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "cmdk": "^1.1.1",
         "cors": "^2.8.5",
         "date-fns": "^4.1.0",
+        "date-fns-tz": "^3.1.3",
         "dotenv": "^16.6.1",
         "embla-carousel-react": "^8.6.0",
         "express": "^5.1.0",
@@ -99,6 +100,7 @@
         "react-resizable-panels": "^2.1.9",
         "react-rewards": "^2.1.0",
         "react-router": "^7.8.1",
+        "react-router-dom": "npm:react-router@^7.8.1",
         "react-svg": "^16.3.0",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.7",
@@ -126,6 +128,7 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/leaflet": "^1.9.20",
         "@types/lodash": "^4.17.20",
+        "typescript": "~5.7.3",
         "@types/node": "^22.17.2",
         "@types/pluralize": "^0.0.33",
         "@types/react": "^19.1.10",
@@ -138,7 +141,6 @@
         "globals": "^15.15.0",
         "nodemon": "^3.1.10",
         "tw-animate-css": "^1.3.7",
-        "typescript": "~5.7.3",
         "umzug": "^3.8.2",
         "vite": "^6.3.5"
     },
