--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
         "react-leaflet": "^5.0.0",
         "react-markdown": "^10.1.0",
         "react-resizable-panels": "^2.1.9",
+        "react-responsive-masonry": "^2.7.1",
         "react-rewards": "^2.1.0",
         "react-router": "^7.8.1",
         "react-router-dom": "npm:react-router@^7.8.1",
@@ -128,7 +129,6 @@
         "@types/jsonwebtoken": "^9.0.10",
         "@types/leaflet": "^1.9.20",
         "@types/lodash": "^4.17.20",
-        "typescript": "~5.7.3",
         "@types/node": "^22.17.2",
         "@types/pluralize": "^0.0.33",
         "@types/react": "^19.1.10",
@@ -141,6 +141,7 @@
         "globals": "^15.15.0",
         "nodemon": "^3.1.10",
         "tw-animate-css": "^1.3.7",
+        "typescript": "~5.7.3",
         "umzug": "^3.8.2",
         "vite": "^6.3.5"
     },
