--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "@react-three/fiber": "^9.3.0",
         "@tanstack/react-query": "^5.85.5",
         "@tanstack/react-table": "^8.21.3",
+        "@types/react-responsive-masonry": "^2.6.0",
         "@uidotdev/usehooks": "^2.4.1",
         "ai": "^4.3.19",
         "animal-avatar-generator": "^1.2.0",
