--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
         "@types/leaflet": "^1.9.20",
         "@types/lodash": "^4.17.20",
         "@types/node": "^22.17.2",
+        "@types/node-cache": "^4.2.5",
         "@types/pluralize": "^0.0.33",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
