--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
         "react-router": "^7.8.1",
         "react-router-dom": "npm:react-router@^7.8.1",
         "react-svg": "^16.3.0",
+        "recharts": "^2.12.7",
         "remark-gfm": "^4.0.1",
         "sonner": "^2.0.7",
         "tailwind-merge": "^3.3.1",
@@ -135,6 +136,7 @@
         "@types/pluralize": "^0.0.33",
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
+        "@types/recharts": "^1.8.29",
         "@types/three": "^0.175.0",
         "@vitejs/plugin-react": "^4.7.0",
         "@vitejs/plugin-react-swc": "^3.11.0",
