--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
         "noEmit": true,
         "paths": {
             "@shared/*": ["./src/shared/*"],
-            "@/*": ["./src/client/*"]
+            "@/*": ["./src/client/*"],
+            "@server/*": ["./src/server/*"]
         }
     },
     "include": ["src", "./vite.config.ts"]
