--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "lint-server": "npx biome lint --write src/server",
         "lint-client": "npx biome lint --write src/client",
+    "lint": "pnpm run lint-server && pnpm run lint-client",
         "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts",
         "start:preview": "NODE_ENV=production tsx src/server/server.ts",
         "start": "NODE_ENV=production node dist/server/server.js",
