--- a/package.json
+++ b/package.json
@@ -3,25 +3,27 @@
     "private": true,
     "version": "0.0.1",
     "type": "module",
-  "scripts": {
-    "lint:server": "biome lint --write src/server",
-    "lint:client": "biome lint --write src/client",
-    "lint": "pnpm run lint:server && pnpm run lint:client",
+    "scripts": {
+        "lint:server": "biome lint --write src/server",
+        "lint:client": "biome lint --write src/client",
+        "lint": "pnpm run lint:server && pnpm run lint:client",
+        "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts",
+        "start:preview": "NODE_ENV=production tsx src/server/server.ts",
+        "start": "NODE_ENV=production node dist/server/server.js",
+        "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json && tsc-alias -p src/server/tsconfig.json",
+        "dev:bg": "nohup pnpm dev > dev.log 2>&1 & echo $! > .dev.pid",
+        "stop:dev": "kill $(cat .dev.pid 2>/dev/null || echo '') 2>/dev/null || true && rm -f .dev.pid",
+        "start:bg": "nohup pnpm start > start.log 2>&1 & echo $! > .start.pid",
+        "stop:start": "kill $(cat .start.pid 2>/dev/null || echo '') 2>/dev/null || true && rm -f .start.pid",
+        "stop:all": "pnpm stop:dev && pnpm stop:start",
 
-    "dev": "NODE_ENV=development nodemon --verbose --watch src/server --ext ts,json --exec tsx src/server/server.ts",
-    "start:preview": "NODE_ENV=production tsx src/server/server.ts",
-    "start": "NODE_ENV=production node dist/server/server.js",
-    "build": "NODE_ENV=production rm -rf dist && vite build && tsc -p src/server/tsconfig.json && tsc-alias -p src/server/tsconfig.json",
-
-    "dev:bg": "nohup pnpm dev > dev.log 2>&1 & echo $! > .dev.pid",
-    "stop:dev": "kill $(cat .dev.pid 2>/dev/null || echo '') 2>/dev/null || true && rm -f .dev.pid",
-
-    "start:bg": "nohup pnpm start > start.log 2>&1 & echo $! > .start.pid",
-    "stop:start": "kill $(cat .start.pid 2>/dev/null || echo '') 2>/dev/null || true && rm -f .start.pid",
-
-    "stop:all": "pnpm stop:dev && pnpm stop:start"
-  },
-  "dependencies": {
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
+        "test:server": "jest --testPathPattern=src/server",
+        "test:client": "jest --testPathPattern=src/client"
+    },
+    "dependencies": {
         "@ai-sdk/google": "^1.2.22",
         "@ai-sdk/react": "^1.2.12",
         "@blocknote/core": "^0.26.0",
@@ -140,6 +142,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.3",
         "@types/image-blob-reduce": "^4.1.4",
+        "@types/jest": "^30.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/leaflet": "^1.9.20",
         "@types/lodash": "^4.17.20",
@@ -149,13 +152,17 @@
         "@types/react": "^19.1.10",
         "@types/react-dom": "^19.1.7",
         "@types/recharts": "^1.8.29",
+        "@types/supertest": "^6.0.3",
         "@types/three": "^0.175.0",
         "@vitejs/plugin-react": "^4.7.0",
         "@vitejs/plugin-react-swc": "^3.11.0",
         "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
         "dbmate": "^2.28.0",
         "globals": "^15.15.0",
+        "jest": "^30.1.1",
         "nodemon": "^3.1.10",
+        "supertest": "^7.1.4",
+        "ts-jest": "^29.4.1",
         "tw-animate-css": "^1.3.7",
         "typescript": "~5.7.3",
         "umzug": "^3.8.2",
