--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "resolveJsonModule": true,
         "isolatedModules": true,
         "noEmit": true,
+        "types": ["jest", "@types/jest"],
         "paths": {
             "@shared/*": ["./src/shared/*"],
             "@/*": ["./src/client/*"],
