--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
         "@blocknote/shadcn": "^0.26.0",
         "@dnd-kit/core": "^6.3.1",
         "@dnd-kit/utilities": "^3.2.2",
-        "@faker-js/faker": "^9.9.0",
+
         "@genkit-ai/googleai": "^1.16.1",
         "@gradio/client": "^1.17.1",
         "@hookform/resolvers": "^4.1.3",
@@ -138,6 +138,7 @@
     "devDependencies": {
         "@ai-sdk/openai-compatible": "^0.2.16",
         "@biomejs/biome": "2.0.5",
+        "@faker-js/faker": "^9.9.0",
         "@tailwindcss/vite": "^4.1.12",
         "@types/body-parser": "^1.19.6",
         "@types/cors": "^2.8.19",
@@ -170,9 +171,6 @@
     },
     "packageManager": "pnpm@10.15.0+sha512.486ebc259d3e999a4e8691ce03b5cac4a71cbeca39372a9b762cb500cfdf0873e2cb16abe3d951b1ee2cf012503f027b98b6584e4df22524e0c7450d9ec7aa7b",
     "pnpm": {
-        "hoistPattern": [
-            "@types/*",
-            "typescript"
-        ]
+        "hoistPattern": ["@types/*", "typescript"]
     }
 }
